# nodecpp-foundation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: allocator_template.h  assert.h  cpu_exceptions_translator.h  default_assert.h  default_log.h  error.h  exception.h  file_console_sink.h  foundation.h  foundation_module.h  internal_msg.h  log.h  malloc_based_allocator.h  nodecpp_assert.h  page_allocator.h  platform_base.h  ptr_with_data_structs_impl.h  safe_memory_error.h  stack_info.h  std_error.h  string_ref.h  tagged_ptr_impl.h  vector_of_pages.h
src/: cpu_exceptions_translator.cpp  exception.cpp  internal_msg.cpp  log.cpp  nodecpp_assert.cpp  page_allocator.cpp  ptr_with_data_structs_impl.cpp  safe_memory_error.cpp  stack_info.cpp  stack_info_impl.h  std_error.cpp  tagged_ptr_impl.cpp  vector_of_pages.cpp
test/: CMakeLists.txt  main.cpp  my_logger.h  test.h  test_seh.cpp
test/samples/: file_error.cpp  file_error.h  safe_memory_error.cpp  safe_memory_error.h
tools/: CommonCppFlags.cmake  ci-android-ndk-r23c-buildonly.sh  ci-android-ndk-r23c.bat  ci-android-r23b.sh  ci-android-r23c.bat  ci-android-r23c.py  ci-android-r23c.sh  ci-vs2022-clang.bat  travis-unix.sh  travis-windows-clang.bat  travis-windows-msvc.bat
